--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <div class="container">
 
         <div class="alert alert-success mb-3" role="alert">
-            <p>Holy LN</p>
+            <p>ABNORMALITY LONG NOTES.</p>
             <p>難易度表の読み込みと表示に数秒かかります。</p>
             <hr>
-            <p class="mb-0">堀井が作成したLN譜面の難易度表です。</p>
-            <p class="mb-0">Twitterでの評価によりLevelが上下します笑</p>
+            <p class="mb-0"></p>
+            <p class="mb-0"></p>
             <p class="mb-0">差分保管：<a href="https://t.co/RGmSVOrO7C">https://t.co/RGmSVOrO7C</a></p>
         </div>
 
