--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p>ABNORMALITY LONG NOTES.</p>
             <p>難易度表の読み込みと表示に数秒かかります。</p>
             <hr>
-            <p class="mb-0">a</p>
+            <p class="mb-0">工事中です</p>
             <p class="mb-0"></p>
             <p class="mb-0">差分保管：<a href="https://t.co/RGmSVOrO7C">https://t.co/RGmSVOrO7C</a></p>
         </div>
