--- a/index.html
+++ b/index.html
@@ -88,8 +88,14 @@
                     $("<td width='40%'>" + info[i].artist + "</td>").appendTo(str);
 
                     // Comment
-                    $("<td width='10%'>" + info[i].comment + "</td>").appendTo(str);
+                    $("<td width='10%'>" + info[i].タイプ1 + "</td>").appendTo(str);
                     str.appendTo(obj);
+                    count++;
+                    // Comment
+                    $("<td width='10%'>" + info[i].タイプ1 + "</td>").appendTo(str);
+                    count++;
+                    // Comment
+                    $("<td width='10%'>" + info[i].タイプ2 + "</td>").appendTo(str);
                     count++;
 
                 }
