--- a/index.html
+++ b/index.html
@@ -89,9 +89,11 @@
 
                     // Comment
                     $("<td width='10%'>" + info[i].タイプ1 + "</td>").appendTo(str);
+                    str.appendTo(obj);
                     count++;
                     // Comment
                     $("<td width='10%'>" + info[i].タイプ2 + "</td>").appendTo(str);
+                    str.appendTo(obj);
                     count++;
 
                 }
