--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 var obj = $("#table_int");
 
                 obj.html("");
-                $("<thead class='table-dark'><tr><th>Level</th><th>Title</th><th>Artist</th><th>タイプ1</th><th>タイプ2</th></tr></thead><tbody>")
+                $("<thead class='table-dark'><tr><th>Level</th><th>Title</th><th>Artist</th><th>タイプ1</th></tr></thead><tbody>")
                     .appendTo(obj);
                 var obj_sep = null;
                 for (var i = 0; i < info.length; i++) {
@@ -91,10 +91,7 @@
                     $("<td width='10%'>" + info[i].タイプ1 + "</td>").appendTo(str);
                     str.appendTo(obj);
                     count++;
-                    // Comment
-                    $("<td width='10%'>" + info[i].タイプ2 + "</td>").appendTo(str);
-                    str.appendTo(obj);
-                    count++;
+
 
                 }
                 $("</tbody>").appendTo(obj);
