--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 var obj = $("#table_int");
 
                 obj.html("");
-                $("<thead class='table-dark'><tr><th>Level</th><th>Title</th><th>Artist</th><th>type</th></tr></thead><tbody>")
+                $("<thead class='table-dark'><tr><th>CLASS</th><th>TITLE</th><th>ARTIST</th><th>TYPE</th></tr></thead><tbody>")
                     .appendTo(obj);
                 var obj_sep = null;
                 for (var i = 0; i < info.length; i++) {
