--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     var str = $("<tr></tr>");
 
                     // Level
-                    $("<td width='5%'>" + mark + x + "</td>").appendTo(str);
+                    $("<td width='5%'>" + x + "</td>").appendTo(str);
 
                     // Title
                     $("<td width='45%'>" +
