--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
 
         <div class="alert alert-success mb-3" role="alert">
-            <p>MYSTERIOUS LONG NOTE.</p>
+            <p>MYSTERIOUS LONG NOTE</p>
             <p>難易度表の読み込みと表示に数秒かかります。</p>
             <hr>
             <p class="mb-0">工事中です</p>
