--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
                     str.appendTo(obj);
                     count++;
 
+                                        // タイプ1
+                    $("<td width='10%'>" + info[i].タイプ2 + "</td>").appendTo(str);
+                    str.appendTo(obj);
+                    count++;
+
+
 
                 }
                 $("</tbody>").appendTo(obj);
