--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p class="mb-0">FANTASY：変わった譜面の中でも特に変わった譜面に魅了された人向けのクラス</p>
             <p class="mb-0">CHAOS：一般的に本質と呼ばれる譜面以外に競技性を見出してしまった残念な人向けのクラス</p>
             <p class="mb-0">TRUTH：聴いた曲が軒並み脳内で速度変化したりワープする譜面に変換される患者向けのクラス</p>
-            <p class="mb-0">人ではない</p>
+            <p class="mb-0">INSANITY：人ではない</p>
             <p class="mb-0"></p>
             <p class="mb-0">差分保管：<a href="https://t.co/RGmSVOrO7C">https://t.co/RGmSVOrO7C</a></p>
         </div>
