--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <!--ここから難易度表本体-->
         <div>
-            <table class="table table-light table-striped table-hover hover-#bce2e8" id="table_int">
+            <table class="table table-light table-striped table-hover" id="table_int">
             </table>
         </div>
         <script language="javascript" type="text/javascript">
