--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <p>MYSTERIOUS LONG NOTE</p>
             <p>難易度表の読み込みと表示に数秒かかります。</p>
             <hr>
-            <p class="mb-0" width='20%'>ADVENTURE&#009;&#009;変わった譜面に自信がある人向けのクラス</p>
-            <p class="mb-0">REALITY&#009;&#009;普段から速度変化や穴抜き譜面を好んで選曲する人向けのクラス</p>
-            <p class="mb-0">FANTASY&#009;&#009;変わった譜面の中でも特に変わった譜面に魅了された人向けのクラス</p>
-            <p class="mb-0">CHAOS&#009;&#009;一般的に本質と呼ばれる譜面以外に競技性を見出してしまった残念な人向けのクラス</p>
-            <p class="mb-0">TRUTH&#009;&#009;聴いた曲が軒並み脳内で速度変化したりワープする譜面に変換される患者向けのクラス</p>
-            <p class="mb-0">INSANITY&#009;&#009;人ではない</p>
+            <pre class="mb-0">ADVENTURE&#009;&#009;変わった譜面に自信がある人向けのクラス</pre>
+            <pre class="mb-0">REALITY&#009;&#009;普段から速度変化や穴抜き譜面を好んで選曲する人向けのクラス</pre>
+            <pre class="mb-0">FANTASY&#009;&#009;変わった譜面の中でも特に変わった譜面に魅了された人向けのクラス</pre>
+            <pre class="mb-0">CHAOS&#009;&#009;一般的に本質と呼ばれる譜面以外に競技性を見出してしまった残念な人向けのクラス</pre>
+            <pre class="mb-0">TRUTH&#009;&#009;聴いた曲が軒並み脳内で速度変化したりワープする譜面に変換される患者向けのクラス</pre>
+            <pre class="mb-0">INSANITY&#009;&#009;人ではない</pre>
             <p class="mb-0"></p>
             <p class="mb-0">差分保管：<a href="https://t.co/RGmSVOrO7C">https://t.co/RGmSVOrO7C</a></p>
         </div>
