--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <pre class="mb-0">TRUTH&#009;&#009;聴いた曲が軒並み脳内で速度変化したりワープする譜面に変換される患者向けのクラス</pre>
             <pre class="mb-0">INSANITY&#009;人ではない</pre>
             <p class="mb-0"></p>
-            <p class="mb-0">差分保管：<a href="https://t.co/RGmSVOrO7C">https://t.co/RGmSVOrO7C</a></p>
+            <pre class="mb-0">差分保管&#009;<a href="https://t.co/RGmSVOrO7C">https://t.co/RGmSVOrO7C</a></pre>
         </div>
 
 
