--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <p>MYSTERIOUS LONG NOTE</p>
             <p>難易度表の読み込みと表示に数秒かかります。</p>
             <hr>
+            <pre class="mb-0">提案不可。掲載してほしい差分について管理人の見えるところで騒いでいただければ掲載される可能性があります。</pre>
             <pre class="mb-0">ADVENTURE&#009;変わった譜面に自信がある人向けのクラス</pre>
             <pre class="mb-0">REALITY&#009;&#009;普段から速度変化や穴抜き譜面を好んで選曲する人向けのクラス</pre>
             <pre class="mb-0">FANTASY&#009;&#009;変わった譜面の中でも特に変わった譜面に魅了された人向けのクラス</pre>
