--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             <p>難易度表の読み込みと表示に数秒かかります。</p>
             <hr>
             <pre class="mb-0">提案不可。掲載してほしい差分について管理人の見えるところで騒いでいただければ掲載される可能性があります。</pre>
-            <pre class="mb-0">ADVENTURE&#009;変わった譜面に自信がある人向けのクラス</pre>
+            <pre class="mb-0">SAFETY&#009;変わった譜面に自信がある人向けのクラス</pre>
             <pre class="mb-0">REALITY&#009;&#009;普段から速度変化や穴抜き譜面を好んで選曲する人向けのクラス</pre>
-            <pre class="mb-0">FANTASY&#009;&#009;変わった譜面の中でも特に変わった譜面に魅了された人向けのクラス</pre>
-            <pre class="mb-0">CHAOS&#009;&#009;一般的に本質と呼ばれる譜面以外に競技性を見出してしまった残念な人向けのクラス</pre>
-            <pre class="mb-0">TRUTH&#009;&#009;聴いた曲が軒並み脳内で速度変化したりワープする譜面に変換される患者向けのクラス</pre>
+            <pre class="mb-0">DESTINY&#009;&#009;変わった譜面の中でも特に変わった譜面に魅了された人向けのクラス</pre>
+            <pre class="mb-0">UNITY&#009;&#009;一般的に本質と呼ばれる譜面以外に競技性を見出してしまった残念な人向けのクラス</pre>
+            <pre class="mb-0">LOYALTY&#009;&#009;聴いた曲が軒並み脳内で速度変化したりワープする譜面に変換される患者向けのクラス</pre>
             <pre class="mb-0">INSANITY&#009;人ではない</pre>
             <p class="mb-0"></p>
             <pre class="mb-0">差分保管&#009;<a href="https://t.co/RGmSVOrO7C">https://t.co/RGmSVOrO7C</a></pre>
