--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <pre class="mb-0">LOYALTY&#009;&#009;聴いた曲が軒並み脳内で速度変化したりワープする譜面に変換される患者向けのクラス</pre>
             <pre class="mb-0">INSANITY&#009;人ではない</pre>
             <p class="mb-0"></p>
-            <pre class="mb-0">差分保管&#009;<a href="https://t.co/RGmSVOrO7C">https://t.co/RGmSVOrO7C</a></pre>
+            <pre class="mb-0">差分保管&#009;<a href="https://x.gd/XCgAl">https://x.gd/XCgAl</a></pre>
         </div>
 
 
