--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="mb-3">
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-dark .bg-info-subtle">
             <div class="container-fluid">
                 <span class="navbar-brand mb-0 h1">MYSTERIOUS LONG NOTE</span>
             </div>
@@ -26,7 +26,7 @@
 
     <div class="container">
 
-        <div class="alert alert-success mb-3" role="alert">
+        <div class="alert alert-success mb-3" role="alert" color=>
             <p>難易度表の読み込みと表示に数秒かかります。</p>
             <hr>
             <pre class="mb-0">提案不可。掲載してほしい差分について管理人の見えるところで騒いでいただければ掲載される可能性があります。</pre>
@@ -36,7 +36,7 @@
             <pre class="mb-0">UNITY&#009;&#009;折角向上させた発狂力を何故かLNに活かしてしまった手遅れな人向けのクラス</pre>
             <pre class="mb-0">LOYALTY&#009;&#009;街中で聴いた曲が軒並み脳内で速度変化したりワープするLN譜面に変換される患者向けのクラス</pre>
             <pre class="mb-0">INSANITY&#009;人ではない</pre>
-            <p class="mb-0"></p>
+            <hr>
             <pre class="mb-0">差分保管&#009;<a href="https://x.gd/XCgAl">https://x.gd/XCgAl</a></pre>
         </div>
 
