--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="mb-3">
-        <nav class="navbar navbar-dark bg-info-subtle">
+        <nav class="navbar navbar-dark bg-subtle">
             <div class="container-fluid">
                 <span class="navbar-brand mb-0 h1">MYSTERIOUS LONG NOTE</span>
             </div>
