--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="container">
 
-        <div class="alert alert-info mb-3" role="alert" color=>
+        <div class="alert alert-info mb-3" role="alert">
             <p>難易度表の読み込みと表示に数秒かかります。</p>
             <hr>
             <pre class="mb-0">提案不可。掲載してほしい差分について管理人の見えるところで騒いでいただければ掲載される可能性があります。</pre>
