--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </script>
 </head>
 
-<body>
+<body class="bg-body-secondary">
     <header class="mb-3">
-        <nav class="navbar navbar-dark bg-body-secondary">
+        <nav class="navbar navbar-dark bg-primary-subtle">
             <div class="container-fluid">
                 <span class="navbar-brand mb-0 h1">MYSTERIOUS LONG NOTE</span>
             </div>
