--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="bg-body-secondary">
     <header class="mb-3">
-        <nav class="navbar navbar-dark bg-primary-subtle">
+        <nav class="navbar navbar-dark" style="background-color:#e3f2fd;">
             <div class="container-fluid">
                 <span class="navbar-brand mb-0 h1">MYSTERIOUS LONG NOTE</span>
             </div>
