--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="bg-body-secondary">
     <header class="mb-3">
-        <nav class="navbar navbar-dark" style="background-color:#f8e6ff; mb-color:#f8e6ff; ">
+        <nav class="navbar navbar-dark" style="background-color:#240a2e;">
             <div class="container-fluid">
                 <span class="navbar-brand mb-0 h1">MYSTERIOUS LONG NOTE</span>
             </div>
@@ -26,7 +26,7 @@
 
     <div class="container">
 
-        <div class="alert alert-primary mb-3" role="alert" style="background-color:#e8bff7;">
+        <div class="alert alert-primary mb-3" role="alert" style="background-color:#f8e6ff;">
             <p>難易度表の読み込みと表示に数秒かかります。</p>
             <hr>
             <pre class="mb-0">提案不可。掲載してほしい差分について管理人の見えるところで騒いでいただければ掲載される可能性があります。</pre>
