--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </script>
 </head>
 
-<body class="bg-body-secondary">
+<body class="bg-body-secondary" style="background-color:#f8e6ff;">
     <header class="mb-3">
         <nav class="navbar navbar-dark" style="background-color:#240a2e;">
             <div class="container-fluid">
