--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="bg-body-secondary" style="background-color:#7f639c;">
     <header class="mb-3">
-        <nav class="navbar navbar-dark" style="background-color:#240a2e;">
+        <nav class="navbar navbar-dark" style="background-color:#090012;">
             <div class="container-fluid">
                 <span class="navbar-brand mb-0 h1">MYSTERIOUS LONG NOTE</span>
             </div>
@@ -62,7 +62,7 @@
                 var obj = $("#table_int");
 
                 obj.html("");
-                $("<thead class='table-dark'><tr><th>CLASS</th><th>TITLE</th><th>ARTIST</th><th>TYPE1</th><th>TYPE2</th></tr></thead><tbody>")
+                $("<thead class='table-dark' style='background-color:#090012'><tr><th>CLASS</th><th>TITLE</th><th>ARTIST</th><th>TYPE1</th><th>TYPE2</th></tr></thead><tbody>")
                     .appendTo(obj);
                 var obj_sep = null;
                 for (var i = 0; i < info.length; i++) {
