--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 $("</tbody>").appendTo(obj);
 
                 if (obj_sep != null) {
-                    obj_sep.html("<td class='table-primary' style='text-align:center' style='background-color:#240a2e' colspan='5'>" + "<b>" + mark + x +
+                    obj_sep.html("<td class='table-primary' style='text-align:center' style="background-color:#090012;" colspan='5'>" + "<b>" + mark + x +
                         " (" + count + "譜面)</b></td>");
                 }
             }
