--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             obj_sep.html("<td colspan='5'>" + "<b>" + mark + x + " (" + count +
                                 "譜面)</b></td>");
                         }
-                        obj_sep = $("<tr class='table-primary' style='text-align:center' style='background-color:#240a2e' id='" + mark + info[i].level +
+                        obj_sep = $("<tr class='table-primary' style='text-align:center' style='background-color:#240a2e;' id='" + mark + info[i].level +
                             "'></tr>");
                         obj_sep.appendTo(obj);
                         count = 0;
