--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="bg-body-secondary" style="background-color:#7f639c;">
     <header class="mb-3">
-        <nav class="navbar navbar-dark" style="background-color:#090012;">
+        <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
                 <span class="navbar-brand mb-0 h1">MYSTERIOUS LONG NOTE</span>
             </div>
@@ -71,7 +71,7 @@
                             obj_sep.html("<td colspan='5'>" + "<b>" + mark + x + " (" + count +
                                 "譜面)</b></td>");
                         }
-                        obj_sep = $("<tr class='table-primary' style='text-align:center' id='" + mark + info[i].level +
+                        obj_sep = $("<tr class='table-dark' style='text-align:center' id='" + mark + info[i].level +
                             "'></tr>");
                         obj_sep.appendTo(obj);
                         count = 0;
