--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <hr>
             <pre class="mb-0">SAFETY&#009;&#009;変わった譜面に自信がある人向けのクラス</pre>
             <pre class="mb-0">REALITY&#009;&#009;普段から速度変化や穴抜き譜面を好んで選曲する人向けのクラス</pre>
-            <pre class="mb-0">DESTINY&#009;&#009;今ならまだstellabms.xyzに戻れる人向けのクラス</pre>
+            <pre class="mb-0">DESTINY&#009;&#009;今ならまだstellabmsに戻れる人向けのクラス</pre>
             <pre class="mb-0">UNITY&#009;&#009;折角向上させた発狂力を何故かLNに活かしてしまった手遅れな人向けのクラス</pre>
             <pre class="mb-0">LOYALTY&#009;&#009;街中で聴いた曲が軒並み脳内で速度変化したりワープするLN譜面に変換される患者向けのクラス</pre>
             <pre class="mb-0">INSANITY&#009;人ではない</pre>
