--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
                     $("<td width='30%'>" + info[i].artist + "</td>").appendTo(str);
 
                     // タイプ1
-                    $("<td width='10%'>" + info[i].タイプ1 + "</td>").appendTo(str);
+                    $("<td width='10%'>" + info[i].TYPE1 + "</td>").appendTo(str);
                     str.appendTo(obj);
                     ;
 
                     // タイプ2
-                    $("<td width='10%'>" + info[i].タイプ2 + "</td>").appendTo(str);
+                    $("<td width='10%'>" + info[i].TYPE2 + "</td>").appendTo(str);
                     str.appendTo(obj);
                     count++;
 
