--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <div class="container">
 
         <div class="alert alert-primary mb-3" role="alert" style="background-color:#f8e6ff;">
-            <pre class="mb-0">提案不可。掲載してほしい差分について管理人の見えるところで騒いでいただければ掲載される可能性があります。</pre>
+            <pre class="mb-0">提案不可。掲載してほしい譜面について管理人の見えるところで騒いでいただければ掲載される可能性があります。</pre>
+            <pre class="mb-0">差分保管&#009;<a href="https://x.gd/XCgAl">https://x.gd/XCgAl</a></pre>
             <hr>
             <pre class="mb-0">SAFETY&#009;&#009;変わった譜面に自信がある人向けのクラス</pre>
             <pre class="mb-0">REALITY&#009;&#009;普段から速度変化や穴抜き譜面を好んで選曲する人向けのクラス</pre>
@@ -36,7 +37,7 @@
             <pre class="mb-0">LOYALTY&#009;&#009;街中で聴いた曲が軒並み脳内で速度変化したりワープするLN譜面に変換される患者向けのクラス</pre>
             <pre class="mb-0">INSANITY&#009;人ではない</pre>
             <hr>
-            <pre class="mb-0">差分保管&#009;<a href="https://x.gd/XCgAl">https://x.gd/XCgAl</a></pre>
+            <pre class="mb-0"><pre class="mb-0">差分保管&#009;<a href="https://x.gd/XCgAl">https://x.gd/XCgAl</a></pre></pre>
         </div>
 
 
