--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <pre class="mb-0"><pre class="mb-0">差分保管&#009;<a href="https://x.gd/XCgAl">https://x.gd/XCgAl</a></pre></pre>
         </div>
 
-
+        <footer class="bg-dark text-white text-center py-3 fixed-bottom">
+        <span class="navbar-brand mb-0 h1">@Holy_Lhaplus</span>
+        </footer>
         <!--ここから難易度表本体-->
         <div>
             <table class="table table-light table-striped table-hover" id="table_int">
