--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
     </script>
+    <style>
+    body {
+      margin-bottom: 56px; /* フッターの高さに合わせる */
+    }
+    footer {
+      height: 56px; /* フッターの高さ */
+    }
+     </style>
 </head>
 
 <body class="bg-body-secondary" style="background-color:#7f639c;">
@@ -40,7 +48,7 @@
             <pre class="mb-0"><pre class="mb-0">差分保管&#009;<a href="https://x.gd/XCgAl">https://x.gd/XCgAl</a></pre></pre>
         </div>
 
-        <footer class="bg-dark text-white text-center py-3 fixed-bottom">
+        <footer class="bg-dark text-white text-right py-3 fixed-bottom">
         <span class="navbar-brand mb-0 h1">@Holy_Lhaplus</span>
         </footer>
         <!--ここから難易度表本体-->
