--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </script>
     <style>
     body {
-      margin-bottom: 56px; /* フッターの高さに合わせる */
+      margin-bottom: 80px; /* フッターの高さ*/
     }
     footer {
-      height: 56px; /* フッターの高さ */
+      height: 80px; /* フッターの高さ*/
     }
      </style>
 </head>
@@ -48,7 +48,7 @@
             <pre class="mb-0"><pre class="mb-0">差分保管&#009;<a href="https://x.gd/XCgAl">https://x.gd/XCgAl</a></pre></pre>
         </div>
 
-        <footer class="bg-dark text-white text-right py-3 fixed-bottom">
+        <footer class="bg-dark text-white text-end py-3 fixed-bottom">
         <span class="navbar-brand mb-0 h1">@Holy_Lhaplus</span>
         </footer>
         <!--ここから難易度表本体-->
