--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <footer class="bg-dark text-white text-end py-3 fixed-bottom">
-        <span class="navbar-brand mb-0 h1">@Holy_Lhaplus</span>
+        <span class="navbar-brand mb-0 h1">@Holy_Lhaplus<a href="https://x.com/Holy_Lhaplus"></span>
         </footer>
         <!--ここから難易度表本体-->
         <div>
