--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <pre class="mb-0">LOYALTY&#009;&#009;街中で聴いた曲が軒並み脳内で速度変化したりワープするLN譜面に変換される患者向けのクラス</pre>
             <pre class="mb-0">INSANITY&#009;人ではない</pre>
             <hr>
-            <pre class="mb-0"><pre class="mb-0">差分保管&#009;<a href="https://x.gd/XCgAl">https://x.gd/XCgAl</a></pre></pre>
+            <pre class="mb-0"><pre class="mb-0">enjoy</pre>
         </div>
 
         <footer class="bg-dark text-white text-end py-3 fixed-bottom">
-        <span class="navbar-brand mb-0 h1">@Holy_Lhaplus<a href="https://x.com/Holy_Lhaplus"></span>
+        <span class="navbar-brand mb-0 h1"><a href="https://x.com/Holy_Lhaplus">@Holy_Lhaplus</a></span>
         </footer>
         <!--ここから難易度表本体-->
         <div>
