--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <pre class="mb-0"><pre class="mb-0">enjoy</pre>
         </div>
 
-        <footer class="bg-dark text-white text-end py-3 fixed-bottom">
+        <footer class="bg-dark text-white text-end py-3 fixed-center">
         <span class="navbar-brand mb-0 h1"><a href="https://x.com/Holy_Lhaplus">@Holy_Lhaplus</a></span>
         </footer>
         <!--ここから難易度表本体-->
