--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <pre class="mb-0">LOYALTY&#009;&#009;街中で聴いた曲が軒並み脳内で速度変化したりワープするLN譜面に変換される患者向けのクラス</pre>
             <pre class="mb-0">INSANITY&#009;人ではない</pre>
             <hr>
-            <pre class="mb-0"><pre class="mb-0">enjoy</pre>
+            <pre class="mb-0 fs-1">enjoy</pre>
         </div>
 
         <footer class="bg-dark text-white text-end py-3 fixed-center">
