--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <pre class="mb-0 fs-1">enjoy</pre>
         </div>
 
-        <footer class="bg-dark text-white text-end py-3 fixed-bottom">
-        <span class="navbar-brand py-3 h1"><a href="https://x.com/Holy_Lhaplus">@Holy_Lhaplus</a></span>
+        <footer class="bg-dark text-white text-end fixed-bottom">
+        <span class="navbar-brand h1"><a href="https://x.com/Holy_Lhaplus">@Holy_Lhaplus</a></span>
         </footer>
         <!--ここから難易度表本体-->
         <div>
