--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <pre class="mb-0 fs-1">enjoy</pre>
         </div>
 
-        <footer class="bg-dark text-white text-end mb-3 fixed-bottom">
-        <span class="navbar-brand mb-0 h1"><a href="https://holylhaplus.github.io/Holy-LN/">Holy LN</a></span>
+        <footer class="bg-dark text-white text-end fixed-bottom">
+        <span class="navbar-brand mb-2 h1"><a href="https://holylhaplus.github.io/Holy-LN/">Holy LN</a></span>
         </footer>
         <!--ここから難易度表本体-->
         <div>
