--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
 
         <footer class="bg-dark text-white text-end fixed-bottom">
-        <span class="navbar-brand mb-2 h1"><a href="https://holylhaplus.github.io/Holy-LN/">Holy LN</a></span>
+        <span class="navbar-brand py-1 h1"><a href="https://holylhaplus.github.io/Holy-LN/">Holy LN</a></span>
         </footer>
         <!--ここから難易度表本体-->
         <div>
