--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <pre class="mb-0">提案不可。掲載してほしい譜面について管理人の見えるところで騒いでいただければ掲載される可能性があります。</pre>
             <pre class="mb-0">差分保管&#009;<a href="https://x.gd/XCgAl">https://x.gd/XCgAl</a></pre>
             <hr>
-            <pre class="mb-0">SAFETY&#009;&#009;変わった譜面に自信がある人向けのクラス</pre>
+            <pre class="mb-0">ADVENTURE&#009;&#009;変わった譜面に自信がある人向けのクラス</pre>
             <pre class="mb-0">REALITY&#009;&#009;普段から速度変化や穴抜き譜面を好んで選曲する人向けのクラス</pre>
-            <pre class="mb-0">DESTINY&#009;&#009;今ならまだstellabmsに戻れる人向けのクラス</pre>
-            <pre class="mb-0">UNITY&#009;&#009;折角向上させた発狂力を何故かLNに活かしてしまった手遅れな人向けのクラス</pre>
-            <pre class="mb-0">LOYALTY&#009;&#009;街中で聴いた曲が軒並み脳内で速度変化したりワープするLN譜面に変換される患者向けのクラス</pre>
-            <pre class="mb-0">INSANITY&#009;人ではない</pre>
+            <pre class="mb-0">HOPE&#009;&#009;今ならまだstellabmsに戻れる人向けのクラス</pre>
+            <pre class="mb-0">TRUTH&#009;&#009;折角向上させた発狂力を何故かLNに活かしてしまった手遅れな人向けのクラス</pre>
+            <pre class="mb-0">SANITY&#009;&#009;街中で聴いた曲が軒並み脳内で速度変化したりワープするLN譜面に変換される患者向けのクラス</pre>
+            <pre class="mb-0">INSANITY&#009;ようこそ</pre>
             <hr>
             <pre class="mb-0 fs-1">enjoy</pre>
         </div>
