--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="container">
 
-        <div class="alert alert-primary mb-3" role="alert" style="background-color:#f8e6ff;">
+        <div class="alert alert-primary mb-3" role="alert text-center" style="background-color:#f8e6ff;">
             <pre class="mb-0">提案不可。掲載してほしい譜面について管理人の見えるところで騒いでいただければ掲載される可能性があります。</pre>
             <pre class="mb-0">差分保管&#009;<a href="https://x.gd/XCgAl">https://x.gd/XCgAl</a></pre>
             <hr>
