--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <pre class="mb-0">SANITY&#009;&#009;街中で聴いた曲が軒並み脳内で速度変化したりワープするLN譜面に変換される患者向けのクラス</pre>
             <pre class="mb-0">INSANITY&#009;ようこそ</pre>
             <hr>
-            <pre class="mb-0 fs-1 text-end">enjoy</pre>
+            <pre class="mb-0 fs-1 text-center">enjoy</pre>
         </div>
         <footer class="bg-dark text-white text-end fixed-bottom">
         <span class="navbar-brand py-1 h1"><a href="https://holylhaplus.github.io/Holy-LN/">Holy LN</a></span>
